# defradb-rs

./: Cargo.toml  README.md
.github/workflows/: unit_tests.yml
corekv/: Cargo.toml
corekv/src/: chunk.rs  lib.rs  namespace.rs  traits.rs
corekv/src/badger/: db.rs  mod.rs  snapshot.rs
corekv/tests/: iter.rs  namespace.rs  snapshot.rs
corekv/tests/common/: mod.rs
corekv/tests/integration/: close.rs  delete_close.rs  drop_all.rs  get.rs  get_close.rs  has.rs  has_close.rs  mod.rs  set_close.rs  set_delete_get.rs  set_drop_all_has.rs  set_get.rs  set_has.rs
corekv/tests/integration/iterator/: close_iter.rs  close_next.rs  close_next_value.rs  close_seek.rs  delete.rs  end.rs  end_namespace.rs  mod.rs  namespace.rs  next.rs  prefix.rs  prefix_delete.rs  prefix_namespace.rs  prefix_reverse.rs  prefix_reverse_next.rs  prefix_set.rs  reset_next_value.rs  reset_seek_next_value.rs  reverse.rs  reverse_end.rs  reverse_end_next.rs  reverse_end_seek_value.rs  reverse_next.rs  reverse_prefix_set.rs  reverse_seek.rs  reverse_seek_next.rs  reverse_seek_value.rs  reverse_set.rs  reverse_snapshot_next_value.rs  reverse_start.rs  reverse_start_end.rs  reverse_start_end_next.rs  reverse_start_next.rs  simple.rs  snapshot_next_value.rs  start.rs  start_end.rs  start_end_namespace.rs  start_namespace.rs  start_seek_value.rs
defradb-rs/: Cargo.toml
keyring/: Cargo.toml
keyring/src/: crypto.rs  file.rs  lib.rs  traits.rs
keyring/tests/: crypto_tests.rs  open_keyring_file.rs
src/: lib.rs
src/kv/: error.rs  key.rs  mod.rs  namespace.rs  raw.rs
src/store/: block.rs
