[package]
name = "corekv"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"
log = "0.4"

badger-rs = { git = "https://github.com/rustonbsd/badger-rs", rev="bc5bc75182a77ff8731b5b5cca4588c1d6b3f7c0" }

[[test]]
name = "iter"
path = "tests/iter.rs"

[[test]]
name = "namespace"
path = "tests/namespace.rs"

[[test]]
name = "snapshot"
path = "tests/snapshot.rs"