[package]
name = "corekv"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"
log = "0.4"

badger-rs = { git = "https://github.com/rustonbsd/badger-rs", rev="89ca9d37fddf610b11516d7b0a553ea56099d289" }

[dev-dependencies]
anyhow = "1"

[[test]]
name = "iter"
path = "tests/iter.rs"

[[test]]
name = "namespace"
path = "tests/namespace.rs"

[[test]]
name = "snapshot"
path = "tests/snapshot.rs"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
