[package]
name = "keyring"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"
tempfile = "3"

# crypto
aes-gcm = "0.10"
aes-kw = "0.3"
aes = "0.9"
pbkdf2 = { version = "0.13", default-features = false }
hmac = "0.13"
sha2 = "0.11"
base64 = "0.22"
serde_json = "1"
getrandom = "0.4"


# crypto test
